manifests/home-assistant/home-assistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant-deployment
  labels:
    app: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      nodeSelector:
        kubernetes.io/hostname: homeserver
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          ports:
            - containerPort: 8123
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: configuration-yaml
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config-pvc
        - name: configuration-yaml
          configMap:
            name: home-assistant-config
