manifests/home-assistant/home-assistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-service
  namespace: home-assistant
spec:
  type: NodePort
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
      nodePort: 30009
