manifests/home-assistant/home-assistant-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-ingressroute
  namespace: home-assistant
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`homeassistant.janikhenz.ch`)
      kind: Rule
      services:
        - name: home-assistant-service
          port: 8123
